--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -18,3 +18,11 @@
     position: absolute;
     width: 300px;
 }
+
+
+@media screen and (max-width: 500px){
+    .headerGroup{
+        padding-left: 25px;
+        padding-top: 25px;
+    }
+}
